feat: Replace token cost label with a token usage bar  - Create TokenUsageBar.java: Implement a new JComponent in `app/src/main/java/io/github/jbellis/brokk/gui/components/TokenUsageBar.java` with `setTokens(int current, int max)`, `setTooltip(String)`, and an optional `setOnClick(Runnable)`. Render a horizontal bar with a background track and a filled segment proportional to `current/max`. Overlay text showing current tokens (e.g., '42K') and total window (e.g., '128K') aligned appropriately. Implement color thresholds: green (<50%), yellow (50–90%), red (>90%). Support preferred/min/max sizes for the bottom toolbar and respect UIManager theme colors.